2008-06-17  yetist  <yetist@gmail.com>

	* lunar/calendar.patch: 
	* lunar/Makefile.am: 
	* README: 
	* tests/Makefile.am: 
	* configure.ac: 
	* INSTALL: 
	做一些修改。

2008-05-29  yetist  <yetist@gmail.com>

	* lunar/lunar-date.h: 
	* lunar/lunar-calendar.c: 
	* lunar/lunar-date.c: 
	* docs/reference/lunar-sections.txt: 
	* docs/reference/tmpl/lunardate.sgml: 
	* docs/reference/tmpl/lunar-unused.sgml: 
	* docs/reference/tmpl/lunarcalendar.sgml: 
	* tests/test-date.c: 
	Change struct name from "LUNARDate" to "LunarDate";

=== liblunar-1.0.0 released ===

2008-04-17  yetist  <yetist@gmail.com>

	* ChangeLog: 
	* README: 
	* configure.ac: 
	* NEWS: 

	liblunar-1.0.0 released

2008-04-17  yetist  <yetist@gmail.com>

	* lunar/calendar.patch: 
	update patch file to gtk+-2.12.8.

2008-04-17  yetist  <yetist@gmail.com>

	* lunar/lunar-calendar.c: 
	* lunar/lunar-date.c: 
	show lunar automatic.
	fixed: 
		- when year less-than 1900 or greater than 2049, calendar will show error lunar.
		- when we view 1900 Jan, the calendar will crash.

2008-04-17  yetist  <yetist@gmail.com>

	* lunar/update-calendar.sh:
	* lunar/lunar-calendar.c: 
	update GtkCalendar to 2.12.8

2008-04-17  redwoods  <redwooods@gmail.com>

	* lunar/lunar-date.c:
	Change type of "year_jieqi()".
	* po/zh_CN.po:
	Keep Sunday as the first day of a week.

2008-04-15  yetist  <yetist@gmail.com>

	* lunar/lunar-date.c: 
	* po/zh_CN.po: 
	use C style unicode of solar term.
	* AUTHORS: add author.
	* tests/test-date.c: init random.

2008-04-15  yetist  <yetist@gmail.com>

	* lunar/lunar-date.c: add thank.
	* data/holiday.dat: remove my birthday.

2008-04-15  redwoods  <redwooods@gmail.com>

	* lunar/lunar-date.c:
	Add function of jie2qi4.
	* data/holiday.dat:
	Modify some festivals.

2008-03-03  yetist  <yetist@gmail.com>

	* pinyin.sh: 
	* lunar/lunar-date.c: 
	* po/zh_CN.po: 
	revert to r33. add pinyin.sh.

=== liblunar-0.2.6 released ===

2008-03-03  yetist  <yetist@gmail.com>

	* configure.ac: 